add: friendly-snip: add support vscode snippets

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,3 +1,5 @@
 {
- "suggest.snippetsSupport": true
+  "suggest.snippetsSupport": true,
+  "snippets.loadFromExtensions": true,
+  "snippets.loadVSCodeProjectSnippets": true
 }
