add: telescope: complete telescope setup

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,5 +1,6 @@
 {
   "suggest.snippetsSupport": true,
   "snippets.loadFromExtensions": true,
-  "snippets.loadVSCodeProjectSnippets": true
+  "snippets.loadVSCodeProjectSnippets": true,
+  "snippets.ultisnips.enable": true
 }
