clear: delete unused line

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -2,5 +2,6 @@
   "suggest.snippetsSupport": true,
   "snippets.loadFromExtensions": true,
   "snippets.loadVSCodeProjectSnippets": true,
-  "snippets.ultisnips.enable": true
+  "snippets.ultisnips.enable": true,
+  "coc.preferences.formatOnSaveFiletypes": ["lua", "html"]
 }
