feat(theme): change theme to nightfox / add some settings for eslint

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -3,5 +3,16 @@
   "snippets.loadFromExtensions": true,
   "snippets.loadVSCodeProjectSnippets": true,
   "snippets.ultisnips.enable": true,
-  "coc.preferences.formatOnSaveFiletypes": ["lua", "html"]
+  "coc.preferences.formatOnSaveFiletypes": [
+    "lua",
+    "html",
+    "javascript",
+    "typescript",
+    "json",
+    "typescriptreact",
+    "javascriptreact",
+    "typescript.tsx",
+    "grapql",
+    "css"
+  ]
 }
