feat(save): save current version before switch to lunarvim

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -14,5 +14,20 @@
     "typescript.tsx",
     "grapql",
     "css"
+  ],
+  "tailwindCSS.cssLanguages": [
+    "css",
+    "less",
+    "postcss",
+    "sass",
+    "scss",
+    "stylus",
+    "vue"
+  ],
+  "tailwindCSS.jsLanguages": [
+    "javascript",
+    "javascriptreact",
+    "reason",
+    "typescriptreact"
   ]
 }
